syntax = "proto3";
package shah_proto;

import "src/proto/action.proto";
import "src/proto/game.proto";

message ClientAction {
    ShahrazadAction action = 1;
    string hash = 2;
}

message ServerUpdate {
    ShahrazadAction action = 1;
    ShahrazadGame game = 2;
    string player_id = 3;
    string hash = 4;
}